<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChangePasswordActivity">

    <TextView
        android:text="@string/str_change_password"
        android:gravity="center"
        android:textSize="@dimen/sp17"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/dp50"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"/>

    <EditText
        android:id="@+id/edt_password_new"
        android:hint="@string/str_password_new"
        android:textSize="@dimen/sp15"
        android:background="@drawable/bg_border_radius"
        android:paddingLeft="@dimen/dp8"
        android:paddingVertical="@dimen/dp15"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edt_confirm_password"
        android:hint="@string/str_confirm_password"
        android:textSize="@dimen/sp15"
        android:background="@drawable/bg_border_radius"
        android:paddingLeft="@dimen/dp8"
        android:paddingVertical="@dimen/dp15"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_submit"
        android:text="@string/str_submit"
        android:textColor="@color/white"
        android:background="@drawable/bg_color_app"
        android:layout_marginHorizontal="@dimen/dp20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>