<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:background="@color/white"
        android:paddingHorizontal="@dimen/dp15"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp50">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_language_vi"
                    android:src="@drawable/img_vn"
                    android:visibility="gone"
                    android:padding="@dimen/dp5"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50" />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_language_en"
                    android:src="@drawable/img_en"
                    android:visibility="gone"
                    android:padding="@dimen/dp5"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50" />
            </LinearLayout>

<!--            img logo-->
            <LinearLayout
                android:layout_marginBottom="@dimen/dp50"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp150">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_logo"
                    android:src="@mipmap/img_logo_shop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

<!--            edt username-->
            <LinearLayout
                android:layout_marginBottom="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_username"
                    android:text="user@gmail.com"
                    android:hint="@string/str_username"
                    android:textSize="@dimen/sp17"
                    android:background="@drawable/bg_border_radius"
                    android:paddingLeft="@dimen/dp8"
                    android:paddingVertical="@dimen/dp15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

<!--            edt password-->
            <LinearLayout
                android:layout_marginBottom="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_password"
                    android:text="123456"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/sp17"
                    android:background="@drawable/bg_border_radius"
                    android:paddingLeft="@dimen/dp8"
                    android:paddingVertical="@dimen/dp15"
                    android:layout_marginBottom="@dimen/dp10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

<!--            forget password-->
            <LinearLayout
                android:gravity="center|end"
                android:layout_marginBottom="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_forget_password"
                    android:text="@string/str_forget_pass"
                    android:textColor="@color/bg_green"
                    android:textSize="@dimen/sp17"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="@dimen/dp5"
                    android:layout_marginVertical="@dimen/dp5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

<!--            btn login-->
            <LinearLayout
                android:layout_marginBottom="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_login"
                    android:text="@string/str_login"
                    android:background="@drawable/bg_color_app"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

<!--            register account-->
            <LinearLayout
                android:gravity="center|end"
                android:layout_marginBottom="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/str_no_account"
                    android:textColor="@color/bg_green"
                    android:textSize="@dimen/sp13"
                    android:layout_marginHorizontal="@dimen/dp5"
                    android:layout_marginVertical="@dimen/dp5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_register"
                    android:text="@string/str_register_now"
                    android:textColor="@color/bg_green"
                    android:textSize="@dimen/sp17"
                    android:textStyle="bold"
                    android:layout_marginHorizontal="@dimen/dp5"
                    android:layout_marginVertical="@dimen/dp5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

<!--            verify phone number-->
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_verify_phone_number"
                    android:text="@string/str_verify_phone_number"
                    android:textColor="@color/red"
                    android:textSize="@dimen/sp17"
                    android:layout_marginHorizontal="@dimen/dp5"
                    android:layout_marginVertical="@dimen/dp5"
                    android:padding="@dimen/dp10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>